src/app.css
@import 'tailwindcss';

@theme {
  --color-text-token: light-dark(var(--color-zinc-900), var(--color-zinc-100));
  --color-background-token: light-dark(var(--color-slate-200), var(--color-zinc-900));
  --color-primary-token: light-dark(var(--color-emerald-600), var(--color-emerald-400));
  --color-on-primary-token: light-dark(var(--color-zinc-900), var(--color-zinc-900));
  --color-surface-token: light-dark(var(--color-zinc-200), var(--color-zinc-800));
  --color-on-surface-token: light-dark(var(--color-zinc-900), var(--color-zinc-100));
}

:root[data-theme="light"] {
  color-scheme: light;
}

:root[data-theme="dark"] {
  color-scheme: dark;
}

:root {
  color-scheme: light dark;
}

html,body {
  background-color: var(--color-background-token);
  color: var(--color-text-token);
  font-family: var(--font-sans);
}

@media print {
  body > nav,
  body > footer {
    display: none;
  }
}

@layer base {
  h1, h2, h3, h4, h5, h6 {
    line-height: 1.25em;
    margin-block-end: 0.25em;
    text-wrap: balance;
    > small {
      margin-inline-start: --spacing(4);
      color: 
        light-dark(
          hsl(from currentColor h s calc(l + 30)),
          hsl(from currentColor h s calc(l - 20))
        );
    }
  }

  h1 {
    font-size: var(--text-3xl);
    font-weight: var(--font-weight-black);
  }

  h2 {
    font-size: var(--text-xl);
    font-weight: var(--font-weight-extrabold);
  }

  h3 {
    font-size: var(--text-lg);
    font-weight: var(--font-weight-bold);
  }

  h4 {
    font-size: var(--text-md);
    font-weight: var(--font-weight-semibold);
    text-decoration: underline;
  }

  .lead {
    font-size: 1.25em;
  }

  a:link,
  a {
    color: light-dark(var(--color-sky-700), var(--color-sky-400));
  }
}

